# AFMER

./: .gitignore  AFMER-2001.xlsx  AFMER-2002.xlsx  AFMER-2007.xlsx  AFMER-2009.xlsx  AFMER-2011.xlsx  AFMER-2022.xlsx  AFMER-2023.xlsx  README.md  activity-labels.json  c.cmd  requirements.txt  v.vbs  x.vbs
AFMER-1998/: page-002-tables.csv  page-004-tables.csv  page-005-tables.csv  page-006-tables.csv  page-007-tables.csv  page-009-tables.csv  page-010-tables.csv  page-011-tables.csv  page-017-tables.csv  page-019-tables.csv  page-020-tables.csv
AFMER-1999/: page-005-tables.csv  page-007-tables.csv  page-010-tables.csv  page-012-tables.csv  page-018-tables.csv  page-019-tables.csv  page-021-tables.csv  page-022-tables.csv
AFMER-2000/: page-003-tables.csv  page-004-tables.csv  page-005-tables.csv  page-006-tables.csv  page-007-tables.csv  page-008-tables.csv  page-009-tables.csv  page-010-tables.csv  page-011-tables.csv  page-012-tables.csv  page-013-tables.csv  page-014-tables.csv  page-015-tables.csv  page-016-tables.csv  page-017-tables.csv  page-018-tables.csv  page-019-tables.csv  page-020-tables.csv  page-021-tables.csv
AFMER-2001/: page-003-tables.csv  page-004-tables.csv  page-005-tables.csv  page-006-tables.csv  page-007-tables.csv  page-008-tables.csv  page-009-tables.csv  page-010-tables.csv  page-011-tables.csv  page-012-tables.csv  page-013-tables.csv  page-014-tables.csv  page-015-tables.csv  page-016-tables.csv  (+5 more)
afmer-etl/: Cargo.toml  README.md  links.proposed.json  validate.py
afmer-etl/src/: db.rs  ffl.rs  histpdf.rs  main.rs  pdf.rs  xlsx.rs
(+9310 files in other folders)
